--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
           <ul class="auth-nav list">
             <li class="item">
               <a href="info@devstudio.com" class="link-namber"
-                >info@devstudio.com</a
-              >
+                ><svg class="icon" width="16" heidth="11">
+                  <use href="./img/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="item">
               <a href="tel:+380961111111" class="link-namber"
@@ -62,10 +65,11 @@
       <section class="feature">
         <div class="down container">
           <ul class="slogan list">
-            <li class="slogan-up"
+            <li class="slogan-up">
               <span class="slogan-img"
-                ><img src="./img/antenna.svg" alt="антена"
-              /></span>
+                ><svg class="icon" width="63" height="70">
+                  <use href="./img/sprite.svg#icon-antenna"></use></svg
+              ></span>
               <h3 class="slogan-title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -74,9 +78,10 @@
             </li>
 
             <li class="slogan-up">
-              <span class="slogan-img"
-                ><img src="./img/Vector.svg" alt="часы"
-              /></span>
+              <span class="slogan-img">
+                <svg class="icon" width="67" height="70">
+                  <use href="./img/sprite.svg#icon-Vector"></use></svg
+              ></span>
 
               <h3 class="slogan-title">Пунктуальность</h3>
               <p class="text">
@@ -87,8 +92,9 @@
 
             <li class="slogan-up">
               <span class="slogan-img"
-                ><img src="./img/diagram.svg" alt="диограма"
-              /></span>
+                ><svg class="icon" width="70" height="54">
+                  <use href="./img/sprite.svg#icon-diagram"></use></svg
+              ></span>
 
               <h3 class="slogan-title">Планирование</h3>
               <p class="text">
@@ -99,8 +105,9 @@
 
             <li class="slogan-up">
               <span class="slogan-img"
-                ><img src="./img/astronaut.svg" alt="астранафт"
-              /></span>
+                ><svg class="icon" width="55" height="61">
+                  <use href="./img/sprite.svg#icon-astronaut"></use></svg
+              ></span>
 
               <h3 class="slogan-title">Современные технологии</h3>
               <p class="text">
@@ -154,10 +161,33 @@
                 <h3 class="names-title">Николай Кучеренко</h3>
                 <p class="prof-text">Product Designer</p>
                 <ul class="social-networks list">
-                  <li><a href="" class="networks">instagram</a></li>
-                  <li><a href="" class="networks">Twitter</a></li>
-                  <li><a href="" class="networks">Facebook</a></li>
-                  <li><a href="" class="networks">Linkedin</a></li>
+                  <li class="networks-list">
+                    <a href="" class="networks">
+                      <svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use
+                          href="./img/sprite.svg#icon-Ellipse-tvit"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse-fa"></use></svg
+                    ></a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse"></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </li>
 
@@ -171,10 +201,33 @@
                 <h3 class="names-title">Ольга Иванова</h3>
                 <p class="prof-text">Frontend Developer</p>
                 <ul class="social-networks list">
-                  <li><a href="" class="networks">instagram</a></li>
-                  <li><a href="" class="networks">Twitter</a></li>
-                  <li><a href="" class="networks">Facebook</a></li>
-                  <li><a href="" class="networks">Linkedin</a></li>
+                  <li class="networks-list">
+                    <a href="" class="networks">
+                      <svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use
+                          href="./img/sprite.svg#icon-Ellipse-tvit"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse-fa"></use></svg
+                    ></a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse"></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </li>
 
@@ -188,10 +241,33 @@
                 <h3 class="names-title">Андрей Шевченко</h3>
                 <p class="prof-text">Marketing</p>
                 <ul class="social-networks list">
-                  <li><a href="" class="networks">instagram</a></li>
-                  <li><a href="" class="networks">Twitter</a></li>
-                  <li><a href="" class="networks">Facebook</a></li>
-                  <li><a href="" class="networks">Linkedin</a></li>
+                  <li class="networks-list">
+                    <a href="" class="networks">
+                      <svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use
+                          href="./img/sprite.svg#icon-Ellipse-tvit"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse-fa"></use></svg
+                    ></a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse"></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </li>
 
@@ -205,10 +281,33 @@
                 <h3 class="names-title">Иван Николаев</h3>
                 <p class="prof-text">UI Designer</p>
                 <ul class="social-networks list">
-                  <li><a href="" class="networks">instagram</a></li>
-                  <li><a href="" class="networks">Twitter</a></li>
-                  <li><a href="" class="networks">Facebook</a></li>
-                  <li><a href="" class="networks">Linkedin</a></li>
+                  <li class="networks-list">
+                    <a href="" class="networks">
+                      <svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use
+                          href="./img/sprite.svg#icon-Ellipse-tvit"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse-fa"></use></svg
+                    ></a>
+                  </li>
+                  <li class="networks-list">
+                    <a href="" class="networks"
+                      ><svg class="icon-social">
+                        <use href="./img/sprite.svg#icon-Ellipse"></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -223,34 +322,40 @@
             <li class="customer-list">
               <a href="" class="company"
                 ><span class="company-img"
-                  ><img src="./img/ya.svg" alt="Кликнты №1"
-                /></span>
+                  ><svg class="company-img" width="45" height="50">
+                    <use href="./img/sprite.svg#icon-ya"></use></svg
+                ></span>
               </a>
             </li>
             <li class="customer-list">
               <a href="" class="company"
-                ><img src="./img/company.svg" alt="Кликнты №2"
-              /></a>
+                ><svg class="company-img" width="40" height="52">
+                  <use href="./img/sprite.svg#icon-company"></use></svg
+              ></a>
             </li>
             <li class="customer-list">
               <a href="" class="company"
-                ><img src="./img/orang.svg" alt="Кликнты №3"
-              /></a>
+                ><svg class="company-img" width="41" height="42">
+                  <use href="./img/sprite.svg#icon-orang"></use></svg
+              ></a>
             </li>
             <li class="customer-list">
               <a href="" class="company"
-                ><img src="./img/forest.svg" alt="Кликнты №4"
-              /></a>
+                ><svg class="company-img" width="80" height="42">
+                  <use href="./img/sprite.svg#icon-forest"></use></svg
+              ></a>
             </li>
             <li class="customer-list">
               <a href="" class="company"
-                ><img src="./img/brend.svg" alt="Кликнты №5"
-              /></a>
+                ><svg class="company-img" width="59" height="47">
+                  <use href="./img/sprite.svg#icon-brend"></use></svg
+              ></a>
             </li>
             <li class="customer-list">
               <a href="" class="company"
-                ><img src="./img/teg.svg" alt="Кликнты №6"
-              /></a>
+                ><svg class="company-img" width="88" height="45">
+                  <use href="./img/sprite.svg#icon-teg"></use></svg
+              ></a>
             </li>
           </ul>
         </section>
@@ -284,13 +389,37 @@
           <li class="push-go">
             <b class="push">присоединяйтесь</b>
             <ul class="social-networks list">
-              <li><a href="" class="networks">instagram</a></li>
-              <li><a href="" class="networks">Twitter</a></li>
-              <li><a href="" class="networks">Facebook</a></li>
-              <li><a href="" class="networks">Linkedin</a></li>
+              <li class="networks-list-footer">
+                <a href="" class="networks">
+                  <svg class="icon-social">
+                    <use href="./img/sprite.svg#icon-Ellipse-insta-fut"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="networks-list-footer">
+                <a href="" class="networks"
+                  ><svg class="icon-social">
+                    <use
+                      href="./img/sprite.svg#icon-Ellipse-tvit-fut"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="networks-list-footer">
+                <a href="" class="networks"
+                  ><svg class="icon-social">
+                    <use href="./img/sprite.svg#icon-Ellipse-fa-fut"></use></svg
+                ></a>
+              </li>
+              <li class="networks-list-footer">
+                <a href="" class="networks"
+                  ><svg class="icon-social">
+                    <use href="./img/sprite.svg#icon-Ellipse-in-fut"></use></svg
+                ></a>
+              </li>
             </ul>
           </li>
-          <li>
+
+          <!-- <li>
             <b class="push">Подпишитесь на рассылку</b>
             <form action="#" class="go">
               <input
@@ -301,12 +430,12 @@
               />
               <input type="submit" value="Подписаться" />
             </form>
-          </li>
+          </li> -->
         </ul>
       </div>
-      <div class="end-box container">
+      <!-- <div class="end-box container">
         <p class="end">2020 | Developed by GoIT Students</p>
-      </div>
+      </div> -->
     </footer>
   </body>
 </html>
