--- a/portfolio.html
+++ b/portfolio.html
@@ -234,31 +234,53 @@
           <li class="push-go">
             <b class="push">присоединяйтесь</b>
             <ul class="social-networks list">
-              <li>
-                <a href="" class="networks">instagram </a>
+              <li class="networks-list-footer">
+                <a href="" class="networks">
+                  <svg class="icon-social">
+                    <use href="./img/sprite.svg#icon-Ellipse-insta-fut"></use>
+                  </svg>
+                </a>
               </li>
-              <li><a href="" class="networks">Twitter</a></li>
-              <li><a href="" class="networks">Facebook</a></li>
-              <li><a href="" class="networks">Linkedin</a></li>
+              <li class="networks-list-footer">
+                <a href="" class="networks"
+                  ><svg class="icon-social">
+                    <use
+                      href="./img/sprite.svg#icon-Ellipse-tvit-fut"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="networks-list-footer">
+                <a href="" class="networks"
+                  ><svg class="icon-social">
+                    <use href="./img/sprite.svg#icon-Ellipse-fa-fut"></use></svg
+                ></a>
+              </li>
+              <li class="networks-list-footer">
+                <a href="" class="networks"
+                  ><svg class="icon-social">
+                    <use href="./img/sprite.svg#icon-Ellipse-in-fut"></use></svg
+                ></a>
+              </li>
             </ul>
           </li>
-          <li>
-            <b class="push">Подпишитесь на рассылку</b>
-            <form action="#" class="go">
-              <input
-                type="text"
-                placeholder="E-mail"
-                name="Email"
-                id="Email-input"
-              />
-              <input type="submit" value="Подписаться" />
-            </form>
-          </li>
+
+          <!-- <li>
+                <b class="push">Подпишитесь на рассылку</b>
+                <form action="#" class="go">
+                  <input
+                    type="text"
+                    placeholder="E-mail"
+                    name="Email"
+                    id="Email-input"
+                  />
+                  <input type="submit" value="Подписаться" />
+                </form>
+              </li> -->
         </ul>
       </div>
-      <div class="end-box container">
-        <p class="end">2020 | Developed by GoIT Students</p>
-      </div>
+      <!-- <div class="end-box container">
+            <p class="end">2020 | Developed by GoIT Students</p>
+          </div> -->
     </footer>
   </body>
 </html>
