--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <ul class="auth-nav list">
             <li class="item">
               <a href="info@devstudio.com" class="link-namber"
-                ><svg class="icon" width="16" heidth="11">
+                ><svg class="mail-icon">
                   <use href="./img/sprite.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com
@@ -42,8 +42,10 @@
             </li>
             <li class="item">
               <a href="tel:+380961111111" class="link-namber"
-                >+38 096 111 11 11</a
-              >
+                ><svg class="tel-icon">
+                  <use href="./img/sprite.svg#icon-smartphone"></use></svg
+                >+38 096 111 11 11
+              </a>
             </li>
           </ul>
         </nav>
