--- a/index.html
+++ b/index.html
@@ -321,12 +321,11 @@
         <section class="section">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="customers list">
-            <li class="customer-list">
-              <a href="" class="company"
-                ><span class="company-img"
-                  ><svg class="company-img" width="45" height="50">
-                    <use href="./img/sprite.svg#icon-ya"></use></svg
-                ></span>
+            <li class="customer-list company-img">
+              <a href="" class="company">
+                <svg class="company-img" width="45" height="50">
+                  <use href="./img/sprite.svg#icon-ya"></use>
+                </svg>
               </a>
             </li>
             <li class="customer-list">
@@ -393,14 +392,14 @@
             <ul class="social-networks list">
               <li class="networks-list-footer">
                 <a href="" class="networks">
-                  <svg class="icon-social">
+                  <svg class="icon-social-fut">
                     <use href="./img/sprite.svg#icon-Ellipse-insta-fut"></use>
                   </svg>
                 </a>
               </li>
               <li class="networks-list-footer">
                 <a href="" class="networks"
-                  ><svg class="icon-social">
+                  ><svg class="icon-social-fut">
                     <use
                       href="./img/sprite.svg#icon-Ellipse-tvit-fut"
                     ></use></svg
@@ -408,13 +407,13 @@
               </li>
               <li class="networks-list-footer">
                 <a href="" class="networks"
-                  ><svg class="icon-social">
+                  ><svg class="icon-social-fut">
                     <use href="./img/sprite.svg#icon-Ellipse-fa-fut"></use></svg
                 ></a>
               </li>
               <li class="networks-list-footer">
                 <a href="" class="networks"
-                  ><svg class="icon-social">
+                  ><svg class="icon-social-fut">
                     <use href="./img/sprite.svg#icon-Ellipse-in-fut"></use></svg
                 ></a>
               </li>
