--- a/portfolio.html
+++ b/portfolio.html
@@ -35,13 +35,18 @@
           <ul class="auth-nav list">
             <li class="item">
               <a href="info@devstudio.com" class="link-namber"
-                >info@devstudio.com</a
-              >
+                ><svg class="mail-icon">
+                  <use href="./img/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="item">
               <a href="tel:+380961111111" class="link-namber"
-                >+38 096 111 11 11</a
-              >
+                ><svg class="tel-icon">
+                  <use href="./img/sprite.svg#icon-smartphone"></use></svg
+                >+38 096 111 11 11
+              </a>
             </li>
           </ul>
         </nav>
@@ -52,8 +57,27 @@
         <!-- наши работ2 -->
         <h1 class="onli">наши рабоы</h1>
         <!-- скрытый заголовок -->
+        <div class="container">
+          <ul class="button-primary list">
+            <li class="item">
+              <button type="button" class="input">Все</button>
+            </li>
+            <li class="item">
+              <button type="button" class="input">Приложения</button>
+            </li>
+            <li class="item">
+              <button type="button" class="input">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="input">Маркетинг</button>
+            </li>
+            <li class="item">
+              <button type="button" class="input">Веб-сайты</button>
+            </li>
+          </ul>
+        </div>
 
-        <ul class="button list container">
+        <!-- <ul class="button list container">
           <li class="button-primary"><a href="" class="but-link">Все</a></li>
           <li class="button-primary">
             <a href="" class="but-link">Веб-сайт</a>
@@ -65,7 +89,7 @@
           <li class="button-primary">
             <a href="" class="but-link">Маркетинг</a>
           </li>
-        </ul>
+        </ul> -->
         <div class="work-box container">
           <section class="work">
             <ul class="work-list list">
@@ -236,14 +260,14 @@
             <ul class="social-networks list">
               <li class="networks-list-footer">
                 <a href="" class="networks">
-                  <svg class="icon-social">
+                  <svg class="icon-social-fut">
                     <use href="./img/sprite.svg#icon-Ellipse-insta-fut"></use>
                   </svg>
                 </a>
               </li>
               <li class="networks-list-footer">
                 <a href="" class="networks"
-                  ><svg class="icon-social">
+                  ><svg class="icon-social-fut">
                     <use
                       href="./img/sprite.svg#icon-Ellipse-tvit-fut"
                     ></use></svg
@@ -251,13 +275,13 @@
               </li>
               <li class="networks-list-footer">
                 <a href="" class="networks"
-                  ><svg class="icon-social">
+                  ><svg class="icon-social-fut">
                     <use href="./img/sprite.svg#icon-Ellipse-fa-fut"></use></svg
                 ></a>
               </li>
               <li class="networks-list-footer">
                 <a href="" class="networks"
-                  ><svg class="icon-social">
+                  ><svg class="icon-social-fut">
                     <use href="./img/sprite.svg#icon-Ellipse-in-fut"></use></svg
                 ></a>
               </li>
