--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
       <!--герой-->
-      <div class="hero-box container">
+      <div class="hero-box">
         <section class="hero">
           <h1 class="hero-title">
             эффективные решения<br />
