--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </a>
           <ul class="site-nav list">
             <li class="item">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="./index.html" class="link active">Студия</a>
             </li>
             <li class="item">
               <a href="./portfolio.html" class="link">Портфолио</a>
