--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
               <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="link active">Портфолио</a>
             </li>
             <li class="item">
               <a href="" class="link">Контакты</a>
@@ -95,14 +95,20 @@
             <ul class="work-list list">
               <li class="work-item">
                 <a href="" class="work-linke">
-                  <img src="./img/комп.jpg" alt="Технократия" width="370" />
-                  <h2 class="work-title">Технократия</h2>
-                  <p class="work-product">Веб-сайт</p>
-                  <!-- <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
+                  <div class="portfolio-image">
+                    <img src="./img/комп.jpg" alt="Технократия" width="370" />
+
+                    <p class="text-back">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="text-content">
+                    <h2 class="work-title">Технократия</h2>
+                    <p class="work-product">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
 
